# USB2Saturn

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  build_with_docker.sh  pico_sdk_import.cmake
docs/: BOARD_BOM.csv  BOARD_DESIGN.md  BOARD_NETLIST.csv  BUILD_VALIDATION.md  SCHEMATICS.md
hardware/USB2Saturn_Protection/: README.md  USB2Saturn_Local.kicad_sym  USB2Saturn_Protection.kicad_pcb  USB2Saturn_Protection.kicad_pro  USB2Saturn_Protection.kicad_sch  fp-lib-table  sym-lib-table
src/: input_mapper.c  input_mapper.h  main.c  saturn_keyboard_protocol.c  saturn_keyboard_protocol.h  saturn_mouse_protocol.c  saturn_mouse_protocol.h  saturn_out.c  saturn_out.h  tusb_config.h  usb_host.c  usb_host.h
tests/: test_input_mapper.c  test_keyboard_protocol.c  test_mouse_protocol.c
